# groulette

./: groulette.c  groulette.glade  meson.build
